--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,14 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+  <script src="http://localhost:3001/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io.connect('http://localhost:3000/');
+    socket.on('news', function (data) {
+      console.log(data);
+      socket.emit('my other event', { my: 'data' });
+    });
+  </script>
 </body>
 </html>
